--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snackbar</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+    />
+    <link rel="stylesheet" href="iziToast.min.css" />
   </head>
   <body>
     <section>
@@ -33,5 +39,7 @@
     </form>
 
     <script type="module" src="./js/2-snackbar.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="iziToast.min.js" type="text/javascript"></script>
   </body>
 </html>
